# agents-cli-sandbox

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  INSTRUCTIONS.md  Makefile  README.md  claude_todo.json  docker-compose.yml  main.py  pyproject.toml  sample.env
.claude/: settings.local.json
.github/: issue-analysis.md
claude-settings/: settings.json
commands/: issue.md
docs/: environment.md
py_claude_sandbox/: __init__.py  cli.py  config.py  container_manager.py  credential_manager.py  git_monitor.py  models.py  web_main.py  web_ui.py
scripts/: docker-setup.sh  init.sh  update.sh
src/acs/: taskrunner.py
tests/: __init__.py  test_cli.py  test_config.py  test_container_manager.py  test_credential_manager.py  test_docker_setup.py  test_git_monitor.py  test_integration.py  test_taskrunner.py  test_web_ui.py
